objects/Search_Merge_Duplicate_Opportunity_Pair__c.object
<CustomObject>
    <label>Search/Merge Duplicate Opportunity Pair</label>
    <nameField>
        <displayFormat>SearchMerge-{0}</displayFormat>
        <label>Search/Merge Duplicate Opportunity Pair Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search/Merge Duplicate Opportunity Pairs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Instructions__c</fullName>
        <formula>if ( Households_Different__c , 
&apos;The two Opportunities are associated with different households.  Click the Merge button in the upper right to merge the households and the opportunities&apos;,
&apos;Click the Merge button in the upper right to Merge the two Opportunities&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_to_Keep__c</fullName>
        <label>Opportunity to Keep</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Search/Merge Duplicate Opportunity Pairs</relationshipLabel>
        <relationshipName>Search_Merge_Duplicate_Opportunity_Pairs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Households_Different__c</fullName>
        <formula>if (  ISBLANK( Opportunity_to_Keep__r.Primary_Household__c ) || 
ISBLANK( Opportunity_to_Merge__r.Primary_Household__c ), false,
 if (Opportunity_to_Keep__r.Primary_Household__c != Opportunity_to_Merge__r.Primary_Household__c , true, false)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Households Different</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_to_Merge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity to Merge</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Search/Merge Duplicate Opportunity Pairs (Opportunity to Merge)</relationshipLabel>
        <relationshipName>Search_Merge_Duplicate_Opportunity_Pair1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household_of_Opportunity_to_Keep__c</fullName>
        <formula>Opportunity_to_Keep__r.Primary_Household__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household of Opportunity to Keep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_of_Opportunity_to_Merge__c</fullName>
        <formula>Opportunity_to_Merge__r.Primary_Household__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household of Opportunity to Merge</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Same_Record_Type</fullName>
        <active>true</active>
        <errorConditionFormula>Opportunity_to_Keep__r.RecordType.DeveloperName &lt;&gt;  Opportunity_to_Merge__r.RecordType.DeveloperName</errorConditionFormula>
        <errorMessage>Cannot merge opportunities of differing business lines (e.g. a Senior Living opportunity cannot be merged with a Skilled Nursing Opportunity)</errorMessage>
    </validationRules>
</CustomObject>